+ Remake graph implementation:   * Rename graph to quiver   * Refuse the idea of native inputs/outputs support * Rename graph.lisp -> quiver.lisp, graph-test.lisp -> quiver-test.lisp

--- a/notes.org
+++ b/notes.org
@@ -14,8 +14,8 @@
 *** Приложение
 код алгоритма и экспериментов
 ** Реализация
-*** STCGP - Strongly Typed Cartesian GP
-**** Реализация STCGP (+ADF, ...)
+*** STECGP - Strongly Typed Embedded Cartesian Genetic Programming
+**** Реализация STECGP (+ADF, ...)
 ***** эксперименты [0/3]:
 ****** TODO подбор топологии МВС и параллельного алгоритма для решения задачи
 ****** TODO оптимальный набор кода на клавиатуре
@@ -25,6 +25,9 @@
 ****** TODO генерация абстрактных изображений
 ****** TODO генерация музыки
 **** Мысли:
++ Реализовать граф без входов/выходов у вершин, но с множественными связями (с отдельными
+  свойствами) между вершинами
+***** old
 + кроссовер имеет мало смысла (случайный обмен случайными фрагментами особей - согласованная
   мутация), и действует даже хуже, чем мутация - меньше вносимого разнообразия
   (А МОЖЕТ И НЕТ)
