+ Finish implementation of the first version of 'module' module   * Replace tuples with records in 'type' module   * Add minor fixes of all modules

--- a/notes.org
+++ b/notes.org
@@ -25,10 +25,9 @@
 ****** TODO генерация абстрактных изображений
 ****** TODO генерация музыки
 **** Мысли:
-+ Реализовать граф без входов/выходов у вершин, но с множественными связями (с отдельными
-  свойствами) между вершинами
-***** old
-+ кроссовер имеет мало смысла (случайный обмен случайными фрагментами особей - согласованная
-  мутация), и действует даже хуже, чем мутация - меньше вносимого разнообразия
-  (А МОЖЕТ И НЕТ)
-+ кроссовер стоит реализовать
+***** соединить в алгоритме подходы:
+****** сильная типизация, система типов Хиндли-Милнера
+****** Cartesian GP
+****** Self-Modifying CGP
+****** поддержка модулей с рекурсией и перекрестными связями
+****** генерация функциональных программ с ленивыми вычислениями
