* Complete reimplementation of 'module.lisp' using cl-graph * Add 'properties.lisp' * Add 'constraint.lisp' * Add 'connection.lisp'   * Implement connections * Add minor fixes in the rest of files

--- a/notes.org
+++ b/notes.org
@@ -31,3 +31,4 @@
 ****** Self-Modifying CGP
 ****** поддержка модулей с рекурсией и перекрестными связями
 ****** генерация функциональных программ с ленивыми вычислениями
+***** при выделении модулей стремиться к уменьшению результирующего кода
