* Add file 'feedforward-constraint.lisp' * Rename file 'type.lisp' to 'type-constraint.lisp' * Implement connection revising functions   * Replace ':reader' with ':accessor' methods for nodes and connections slots * Improve type reducibility test system * Add other minor fixes

--- a/notes.org
+++ b/notes.org
@@ -16,7 +16,7 @@
 ** Реализация
 *** STECGP - Strongly Typed Embedded Cartesian Genetic Programming
 **** Реализация STECGP (+ADF, ...)
-***** эксперименты [0/3]:
+***** эксперименты [0/6]:
 ****** TODO подбор топологии МВС и параллельного алгоритма для решения задачи
 ****** TODO оптимальный набор кода на клавиатуре
 ****** TODO моделирование взаимодействий с одновременной эволюцией всех агентов разных типов
@@ -24,6 +24,8 @@
 ******* хищники-хищники
 ****** TODO генерация абстрактных изображений
 ****** TODO генерация музыки
+****** TODO стратегия с шестиугольными ячейками и различными возможностями по управлению
+в зависимости от масштаба карты
 **** Мысли:
 ***** соединить в алгоритме подходы:
 ****** сильная типизация, система типов Хиндли-Милнера
