* Add files:   * call-constraint.lisp   * disjoint-inputs-constraint.lisp   * finite-recursion-constraint.lisp   * uses.lisp * Remake 'object/module' to 'object/graph'   * Rename 'module.lisp' to 'graph.lisp' * Implement 'object/property' and 'object/properties-container' * Implement node groups * Implement nodes and connections purposes * Add a lot of minor fixes * Outline the diploma's contents

--- a/diploma.org
+++ b/diploma.org
@@ -1,1 +1,77 @@
 #+STARTUP: content
+
+* Диплом
+** Тема
+Программная реализация и исследование средств автоматизации проектирования алгоритмов
+** Оглавление
+*** Введение
+Описание проблемы автоматической генерации программ
+*** Глава 1
+Описание принципов генетического программирования, обзор существующих алгоритмов, описание
+разработанного алгоритма (сильно типизированное самомодифицирующееся генетическое программирование
+на графах) и его отличий от существующих алгоритмов
+**** Раздел 1.1
+Генетическое программирование
+**** Раздел 1.2
+Существующие алгоритмы генетического программирования
+***** Подраздел 1.2.1
+GP
+***** Подраздел 1.2.2
+STGP
+***** Подраздел 1.2.3
+CGP
+***** Подраздел 1.2.4
+ECGP
+***** Подраздел 1.2.5
+SMCGP
+**** Раздел 1.3
+Алгоритм cильно типизированного самомодифицирующегося генетического программирования
+на графах
+*** Глава 2
+Подробная документация, описание публичного интерфейса разработанной библиотеки и особенностей
+реализации; разделы - по файлам (модулям) библиотеки
+**** Раздел 2.1
+Узлы, стрелки и соединения
+***** Подраздел 2.1.1
+Узлы
+***** Подраздел 2.1.2
+Стрелки и соединения
+**** Раздел 2.2
+Графы
+**** Раздел 2.3
+Интерпретатор
+**** Раздел 2.4
+Ограничения
+***** Подраздел 2.4.1
+Сильная типизация
+***** Подраздел 2.4.2
+Запрет обратных связей и петель в графе
+***** Подраздел 2.4.3
+Запрет пересекащихся соединений на входах узлов
+**** Раздел 2.5
+Алгоритм генетического программирования, генетические операторы
+***** Подраздел 2.5.1
+Алгоритм
+***** Подраздел 2.5.2
+Стандартные генетические операторы
+***** Подраздел 2.5.3
+Самомодифицирующиеся генетические операторы, макросы
+*** Глава 3
+Описание экспериментов, результатов и сравнительный анализ; разделы - по экспериментам
+**** Раздел 3.1
+Задача проверки четности
+***** Подраздел 3.1.1
+Описание
+***** Подраздел 3.1.2
+Результаты
+**** Раздел 3.2
+Задача "хищник-жертва"
+***** Подраздел 3.2.1
+Описание
+***** Подраздел 3.2.2
+Результаты
+**** ...
+*** Заключение
+Описание проделанной работы, направления будущих исследований
+*** Приложение
+Код библиотеки и файлов экспериментов
