--- a/notes.org
+++ b/notes.org
@@ -1,36 +1,23 @@
 #+STARTUP: content
 
-* Диплом
-** Тема
-Программная реализация и исследование средств автоматизации проектирования алгоритмов
-** Оглавление
-*** Глава 1
-Описание алгоритма сильно типизированного декартового генетического программирования (СТДГП) и
-внесенных изменений
-*** Глава 2
-Описание публичного интерфейса разработанной библиотеки и особенностей реализации
-*** Глава 3
-Эксперименты
-*** Приложение
-код алгоритма и экспериментов
-** Реализация
-*** STECGP - Strongly Typed Embedded Cartesian Genetic Programming
-**** Реализация STECGP (+ADF, ...)
-***** эксперименты [0/6]:
-****** TODO подбор топологии МВС и параллельного алгоритма для решения задачи
-****** TODO оптимальный набор кода на клавиатуре
-****** TODO моделирование взаимодействий с одновременной эволюцией всех агентов разных типов
-******* хищники-жертвы
-******* хищники-хищники
-****** TODO генерация абстрактных изображений
-****** TODO генерация музыки
-****** TODO стратегия с шестиугольными ячейками и различными возможностями по управлению
+* Реализация
+** STECGP - Strongly Typed Embedded Cartesian Genetic Programming
+*** Реализация STECGP (+ADF, ...)
+**** эксперименты [0/6]:
+***** TODO подбор топологии МВС и параллельного алгоритма для решения задачи
+***** TODO оптимальный набор кода на клавиатуре
+***** TODO моделирование взаимодействий с одновременной эволюцией всех агентов разных типов
+****** хищники-жертвы
+****** хищники-хищники
+***** TODO генерация абстрактных изображений
+***** TODO генерация музыки
+***** TODO стратегия с шестиугольными ячейками и различными возможностями по управлению
 в зависимости от масштаба карты
-**** Мысли:
-***** соединить в алгоритме подходы:
-****** сильная типизация, система типов Хиндли-Милнера
-****** Cartesian GP
-****** Self-Modifying CGP
-****** поддержка модулей с рекурсией и перекрестными связями
-****** генерация функциональных программ с ленивыми вычислениями
-***** при выделении модулей стремиться к уменьшению результирующего кода
+*** Мысли:
+**** соединить в алгоритме подходы:
+***** сильная типизация, система типов Хиндли-Милнера
+***** Cartesian GP
+***** Self-Modifying CGP
+***** поддержка модулей с рекурсией и перекрестными связями
+***** генерация функциональных программ с ленивыми вычислениями
+**** при выделении модулей стремиться к уменьшению результирующего кода
